benchmark/logs/phase6_good_20260407_163934.log
[Info] [normal] Forwarded QEMU guest port: 7089->22; 3370->8080 10386->6379 36253->5201 55692->31234 63074->31236 27082->11211
[Info] [test] Forwarded QEMU guest port: 12370->22; 59067->8080 11221->6379 11765->5201 59773->31234 53964->31236 63299->11211
    Updating crates.io index
    Updating git repository `https://github.com/asterinas/inherit-methods-macro`
    Updating git repository `https://github.com/asterinas/smoltcp`
    Updating git repository `https://github.com/asterinas/inventory`
    Updating git repository `https://github.com/asterinas/rust-ctor`
 Downloading crates ...
  Downloaded acpi v5.2.0
  Downloaded bitflags v1.3.2
  Downloaded opaque-debug v0.3.1
  Downloaded defmt-parser v1.0.0
  Downloaded defmt v1.0.1
  Downloaded extension-traits v1.0.1
  Downloaded autocfg v1.5.0
  Downloaded zero v0.1.3
  Downloaded bittle v0.5.7
  Downloaded bit_field v0.10.3
  Downloaded hash32 v0.3.1
  Downloaded cipher v0.3.0
  Downloaded getset v0.1.6
  Downloaded hash32 v0.2.1
  Downloaded xmas-elf v0.10.0
  Downloaded ghost v0.1.20
  Downloaded darling_core v0.13.4
  Downloaded memoffset v0.9.1
  Downloaded cobs v0.3.0
  Downloaded bitflags v2.11.0
  Downloaded owo-colors v4.3.0
  Downloaded managed v0.8.0
  Downloaded proc-macro-error2 v2.0.1
  Downloaded num-conv v0.2.1
  Downloaded funty v2.0.0
  Downloaded uguid v2.2.1
  Downloaded aead v0.4.3
  Downloaded ext-trait v1.0.1
  Downloaded defmt v0.3.100
  Downloaded deranged v0.5.8
  Downloaded generic-array v0.14.9
  Downloaded proc-macro-error-attr2 v2.0.0
  Downloaded num-traits v0.2.19
  Downloaded nougat-proc_macros v0.2.4
  Downloaded never-say-never v6.6.666
  Downloaded ghash v0.4.4
  Downloaded ext-trait-proc_macros v1.0.1
  Downloaded darling_macro v0.13.4
  Downloaded ctr v0.8.0
  Downloaded rustversion v1.0.22
  Downloaded allocator-api2 v0.2.21
  Downloaded crc32fast v1.5.0
  Downloaded defmt-macros v1.0.1
  Downloaded radium v0.7.0
  Downloaded intrusive-collections v0.9.7
  Downloaded font8x8 v0.2.7
  Downloaded lending-iterator v0.1.7
  Downloaded macro_rules_attribute-proc_macro v0.1.3
  Downloaded macro_rules_attribute v0.1.3
  Downloaded lending-iterator-proc_macros v0.1.7
  Downloaded adler32 v1.2.0
  Downloaded polyval v0.5.3
  Downloaded paste v1.0.15
  Downloaded lru v0.16.3
  Downloaded darling v0.13.4
  Downloaded rand_core v0.9.5
  Downloaded polonius-the-crab v0.2.1
  Downloaded rle-decode-fast v1.0.3
  Downloaded ptr_meta_derive v0.3.1
  Downloaded byteorder v1.5.0
  Downloaded proc-macro2 v1.0.106
  Downloaded semver v1.0.28
  Downloaded core2 v0.4.0
  Downloaded powerfmt v0.2.0
  Downloaded log v0.4.29
  Downloaded multiboot2 v0.24.1
  Downloaded quote v1.0.45
  Downloaded dary_heap v0.3.8
  Downloaded libflate_lz77 v2.2.0
  Downloaded const_format_proc_macros v0.2.34
  Downloaded libflate v2.2.1
  Downloaded serde_spanned v0.6.9
  Downloaded nougat v0.2.4
  Downloaded ptr_meta v0.3.1
  Downloaded foldhash v0.2.0
  Downloaded once_cell v1.21.4
  Downloaded spin v0.9.8
  Downloaded subtle v2.4.1
  Downloaded thiserror-impl v2.0.18
  Downloaded postcard v1.1.3
  Downloaded tap v1.0.1
  Downloaded takeable v0.2.2
  Downloaded stable_deref_trait v1.2.1
  Downloaded thiserror v2.0.18
  Downloaded tdx-guest v0.2.4
  Downloaded aes-gcm v0.9.4
  Downloaded const_format v0.2.35
  Downloaded universal-hash v0.4.1
  Downloaded bitvec v1.0.1
  Downloaded volatile v0.4.6
  Downloaded hashbrown v0.14.5
  Downloaded aes v0.7.5
  Downloaded time-core v0.1.8
  Downloaded wyz v0.5.1
  Downloaded volatile v0.6.1
  Downloaded toml_datetime v0.6.11
  Downloaded iced-x86 v1.21.0
  Downloaded unwinding v0.2.8
  Downloaded toml v0.7.8
  Downloaded json v0.12.4
  Downloaded raw-cpuid v10.7.0
  Downloaded indexmap v2.13.1
  Downloaded gimli v0.32.3
  Downloaded memchr v2.8.0
  Downloaded unicode-ident v1.0.24
  Downloaded itertools v0.10.5
  Downloaded gimli v0.28.1
  Downloaded heapless v0.8.0
  Downloaded zerocopy-derive v0.8.48
  Downloaded libc v0.2.184
  Downloaded zerocopy v0.8.48
  Downloaded multiboot2-common v0.3.0
  Downloaded heapless v0.7.17
  Downloaded syn v2.0.117
  Downloaded time v0.3.47
  Downloaded x86_64 v0.14.13
  Downloaded x86 v0.52.0
  Downloaded winnow v0.5.40
  Downloaded uefi-raw v0.12.0
  Downloaded toml_edit v0.19.15
    Updating crates.io index
 Downloading crates ...
  Downloaded getopts v0.2.24
  Downloaded rustc-literal-escaper v0.0.5
warning: unstable feature specified for `-Ctarget-feature`: `ermsb`
  |
  = note: this feature is not stably supported; its behavior can change in the future

warning: `ostd-test` (lib) generated 1 warning
warning: `linux-boot-params` (lib) generated 1 warning (1 duplicate)
warning: `align_ext` (lib) generated 1 warning (1 duplicate)
warning: `id-alloc` (lib) generated 1 warning (1 duplicate)
warning: `int-to-c-enum` (lib) generated 1 warning (1 duplicate)
warning: `typeflags-util` (lib) generated 1 warning (1 duplicate)
warning: `ostd-pod` (lib) generated 1 warning (1 duplicate)
warning: `aster-rights` (lib) generated 1 warning (1 duplicate)
warning: `ostd` (lib) generated 1 warning (1 duplicate)
warning: `jhash` (lib) generated 1 warning (1 duplicate)
warning: `component` (lib) generated 1 warning (1 duplicate)
warning: `osdk-heap-allocator` (lib) generated 1 warning (1 duplicate)
warning: `aster-util` (lib) generated 1 warning (1 duplicate)
warning: `aster-console` (lib) generated 1 warning (1 duplicate)
warning: `aster-input` (lib) generated 1 warning (1 duplicate)
warning: `aster-pci` (lib) generated 1 warning (1 duplicate)
warning: `aster-cmdline` (lib) generated 1 warning (1 duplicate)
warning: `device-id` (lib) generated 1 warning (1 duplicate)
warning: `aster-softirq` (lib) generated 1 warning (1 duplicate)
warning: `aster-systree` (lib) generated 1 warning (1 duplicate)
warning: `aster-framebuffer` (lib) generated 1 warning (1 duplicate)
warning: `aster-logger` (lib) generated 1 warning (1 duplicate)
warning: `aster-time` (lib) generated 1 warning (1 duplicate)
warning: `aster-uart` (lib) generated 1 warning (1 duplicate)
warning: `aster-i8042` (lib) generated 1 warning (1 duplicate)
warning: `cpio-decoder` (lib) generated 1 warning (1 duplicate)
warning: `osdk-frame-allocator` (lib) generated 1 warning (1 duplicate)
   Compiling ext4_rs v1.3.3 (/root/asterinas/kernel/libs/ext4_rs)
warning: `aster-bigtcp` (lib) generated 1 warning (1 duplicate)
warning: `aster-block` (lib) generated 1 warning (1 duplicate)
warning: `xarray` (lib) generated 1 warning (1 duplicate)
warning: `keyable-arc` (lib) generated 1 warning (1 duplicate)
warning: `logo-ascii-art` (lib) generated 1 warning (1 duplicate)
warning: `aster-network` (lib) generated 1 warning (1 duplicate)
warning: `aster-mlsdisk` (lib) generated 1 warning (1 duplicate)
warning: `aster-virtio` (lib) generated 1 warning (1 duplicate)
warning: the feature `error_in_core` has been stable since 1.81.0 and no longer requires an attribute to enable
 --> /root/asterinas/kernel/libs/ext4_rs/src/lib.rs:1:12
  |
1 | #![feature(error_in_core)]
  |            ^^^^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error[E0499]: cannot borrow `parent_block.data` as mutable more than once at a time
   --> /root/asterinas/kernel/libs/ext4_rs/src/ext4_impls/extents.rs:672:17
    |
656 |               let header: &mut Ext4ExtentHeader = parent_block.read_offset_as_mut(0);
    |                                                   ------------ first mutable borrow occurs here
...
672 | /                 parent_block
673 | |                     .data
    | |_________________________^ second mutable borrow occurs here
...
682 |               header.entries_count += 1;
    |               ------------------------- first borrow later used here

error[E0499]: cannot borrow `parent_block` as mutable more than once at a time
   --> /root/asterinas/kernel/libs/ext4_rs/src/ext4_impls/extents.rs:678:51
    |
656 |             let header: &mut Ext4ExtentHeader = parent_block.read_offset_as_mut(0);
    |                                                 ------------ first mutable borrow occurs here
...
678 |             let new_index: &mut Ext4ExtentIndex = parent_block.read_offset_as_mut(idx_off);
    |                                                   ^^^^^^^^^^^^ second mutable borrow occurs here
...
682 |             header.entries_count += 1;
    |             ------------------------- first borrow later used here

For more information about this error, try `rustc --explain E0499`.
warning: `ext4_rs` (lib) generated 2 warnings (1 duplicate)
error: could not compile `ext4_rs` (lib) due to 2 previous errors; 2 warnings emitted
[Error]: Cargo build failed
